# matrepr

./: README.md  docs.sh  pyproject.toml
.github/workflows/: tests.yml
doc/: demo-edgecases.ipynb  demo-jupyter-screenshots.ipynb  demo-numpy.ipynb  demo-pydata-sparse.ipynb  demo-python-graphblas.ipynb  demo-pytorch.ipynb  demo-tensorflow.ipynb  demo.ipynb
matrepr/: __init__.py  html.py  html_formatter.py  jupyter.py  jupyter_html.py  jupyter_latex.py  latex.py  latex_formatter.py  list_converter.py  string_formatter.py
matrepr/adapters/: __init__.py  graphblas_driver.py  graphblas_impl.py  list_like.py  numpy_driver.py  numpy_impl.py  scipy_driver.py  scipy_impl.py  sparse_driver.py  sparse_impl.py  tensorflow_driver.py  tensorflow_impl.py  torch_driver.py  torch_impl.py
matrepr/patch/: __init__.py  graphblas.py  scipy.py  sparse.py
tests/: test_basic.py  test_graphblas.py  test_html.py  test_latex.py  test_list_like.py  test_numpy.py  test_performance.py  test_scipy.py  test_sparse.py  test_str.py  test_tensorflow.py  test_torch.py
tools/: make_readme_links_absolute.sh
