[project]
name = "matrepr"
version = "0.8.2"
description="Format matrices and tensors to HTML, string, and LaTeX, with Jupyter integration."
readme = "README.md"
authors = [
    { name = "Adam Lugowski"},
]
dependencies = ["tabulate"]
requires-python = ">=3.7"

classifiers = [
#    "Development Status :: 5 - Production/Stable",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

keywords = [
    "matrix",
    "tensor",
    "sparse",
    "html",
    "latex",
    "representation",
    "table",
    "numpy",
    "scipy",
    "pydata",
    "graphblas",
    "torch",
    "pytorch",
    "tensorflow",
]

[project.urls]
homepage = "https://github.com/alugowski/matrepr"
repository = "https://github.com/alugowski/matrepr"

[project.optional-dependencies]
test = ["pytest", "html5lib", "scipy"]
supported = ["scipy", "numpy", "python-graphblas", "sparse", "torch", "tensorflow"]
